--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 		<link rel="manifest" href="icons.webmanifest" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100;0,8..144,300;0,8..144,400;0,8..144,700;1,8..144,400;1,8..144,800&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;700&family=Roboto+Flex:opsz@8..144&display=swap"
 			rel="stylesheet"
 		/>
 		<link
