terminal and jquery imports

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="manifest" href="icons.webmanifest" />
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+		<script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css"
+		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -15,6 +21,7 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>Marcos Leite</title>
 	</head>
 	<body>
